Progressed with home page

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -14,7 +14,7 @@
 				{{>ourProcess}}
 
 				{{>latestProducts}}
-
+				
 				{{>occasions}}
 
 				{{>exclusiveFeature}}
@@ -23,7 +23,7 @@
 
 				{{>weAreExcited}}
 
-				{{>portfolio}}
+<!-- portfolio -->				
 
 				{{>orderNow}}
 
