--- a/partials/footer.html
+++ b/partials/footer.html
@@ -15,7 +15,7 @@
 
 							<div class="alert alert-danger hidden" id="newsletterError"></div>
 
-							<form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST">
+							<form id="newsletterForm" action="#" method="POST">
 								<div class="input-group">
 									<input class="form-control" placeholder="Email Address" name="email" id="email" type="text">
 									<span class="input-group-btn">
@@ -100,9 +100,9 @@
 						<div class="col-md-4">
 							<nav id="sub-menu">
 								<ul>
-									<li><a href="page-faq.html">FAQ's</a></li>
-									<li><a href="sitemap.html">Sitemap</a></li>
-									<li><a href="contact-us.html">Contact</a></li>
+									<li><a href="#">FAQ's</a></li>
+									<li><a href="#">Sitemap</a></li>
+									<li><a href="#">Contact Us</a></li>
 								</ul>
 							</nav>
 						</div>
