Fixed portfolio, changed some text, added more products

--- a/partials/exclusiveFeature.html
+++ b/partials/exclusiveFeature.html
@@ -1,4 +1,4 @@
-<section class="featured">
+<section class="featured" id="exclusiveFeature">
 	<div class="container">
 
 		<div class="row">
@@ -9,7 +9,7 @@
 					<strong>57</strong> cakes, <strong>128</strong> kinds of filling, more than <strong>400</strong> different tastes 
 				</p>
 				<p class="tall">
-					 Our gourmet cakes are baked exclusively in our award-winning New York bakery and each cake we send can be delivered overnight, nationwide. Our cake delivery service is perfect for your loved ones next birthday, anniversary or special occasion. Order with the best birthday cake delivery site online - we guarantee your gift will be on time! Each cake, cookie and brownie delivery arrives in a gift box and includes a greeting card with your personal message. Saying Happy Birthday has never been easier with our cake deliveries! Mix and match our cakes and cookies for a unique and refreshing gift delivery to let your your loved one know you care.
+					 Our gourmet cakes are baked exclusively in our award-winning bakery and each cake we make represent a piece of art. Our pastry service is perfect for your loved ones next birthday, anniversary or special occasion. Order with the best birthday cake delivery site online - we guarantee your gift will be on time! Each cake, cookie and brownie delivery arrives in a gift box and includes a greeting card with your personal message. Saying Happy Birthday has never been easier with our cake deliveries! Mix and match our cakes and cookies for a unique and refreshing gift delivery to let your your loved one know you care.
 				</p>
 			</div>
 			<div class="col-md-6 push-top">
