--- a/partials/header.html
+++ b/partials/header.html
@@ -1,43 +1,49 @@
 <header class="single-menu flat-menu">
-            <div class="container">
-                <h1 class="logo">
-                    <a href="index.html">
-                        <img alt="Porto" src="img/logo.png">
-                    </a>
-                </h1>
-                <button class="btn btn-responsive-nav btn-inverse" data-toggle="collapse" data-target=".nav-main-collapse">
-                    <i class="icon icon-bars"></i>
-                </button>
+    <div class="container">
+        <h1 class="logo">
+            <a href="index.html">
+                <img alt="Porto" src="img/logo.png">
+            </a>
+        </h1>
+        <button class="btn btn-responsive-nav btn-inverse" data-toggle="collapse" data-target=".nav-main-collapse">
+            <i class="icon icon-bars"></i>
+        </button>
+    </div>
+    <div class="navbar-collapse nav-main-collapse collapse">
+        <div class="container">
+            <div class="social-icons">
+                <ul class="social-icons">
+                    <li class="facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook">Facebook</a></li>
+                    <li class="twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter">Twitter</a></li>
+                    <li class="instagram"><a href="http://www.instagram.com/" target="_blank" title="instagram">instagram</a></li>
+                    <li class="pinterest"><a href="http://www.pinterest.com/" target="_blank" title="pinterest">pinterest</a></li>
+                </ul>
             </div>
-            <div class="navbar-collapse nav-main-collapse collapse">
-                <div class="container">
-                    <div class="social-icons">
-                        <ul class="social-icons">
-                            <li class="facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook">Facebook</a></li>
-                            <li class="twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter">Twitter</a></li>
-                            <li class="instagram"><a href="http://www.instagram.com/" target="_blank" title="instagram">instagram</a></li>
-                            <li class="pinterest"><a href="http://www.pinterest.com/" target="_blank" title="pinterest">pinterest</a></li>
-                        </ul>
-                    </div>
-                    <nav class="nav-main">
-                        <ul class="nav nav-pills nav-main" id="mainMenu">
-                            <li class="dropdown active">
-                                <a data-hash class="dropdown-toggle" href="#home">Home</a>
-                            </li>
-                            <li>
-                                <a data-hash href="#projects">Latest Projects</a>
-                            </li>
-                            <li>
-                                <a data-hash href="#features">Features</a>
-                            </li>
-                            <li>
-                                <a data-hash href="#team">Meet the Team</a>
-                            </li>
-                            <li>
-                                <a data-hash href="#contact">Contact Us</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </header>
+            <nav class="nav-main">
+                <ul class="nav nav-pills nav-main" id="mainMenu">
+                    <li class="dropdown active">
+                        <a data-hash class="dropdown-toggle" href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#ourProcess">Our Process</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#latestProducts">Latest Cakes</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#occasions">Occasions</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#exclusiveFeature">Exclusive</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#aboutUs">About Us</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
