--- a/partials/latestProducts.html
+++ b/partials/latestProducts.html
@@ -1,6 +1,6 @@
 <!-- Start Latest Cakes-->
 				
-<section class="top">
+<section class="top" id="latestProducts">
 	<hr class="tall" />
 	<div class="container">
 		<div class="row" id="projects">
