--- a/partials/libs.html
+++ b/partials/libs.html
@@ -11,7 +11,9 @@
 	<script src="vendor/rs-plugin/js/jquery.themepunch.revolution.js"></script>
 	<script src="vendor/owl-carousel/owl.carousel.js"></script>
 	<script src="vendor/circle-flip-slideshow/js/jquery.flipshow.js"></script>
+	<script src="vendor/jflickrfeed/jflickrfeed.js"></script>
 	<script src="vendor/magnific-popup/magnific-popup.js"></script>
+	<script src="vendor/isotope/jquery.isotope.js"></script>
 	<script src="vendor/jquery.validate.js"></script>
 
 	<!-- Current Page Scripts -->
@@ -24,17 +26,5 @@
 	<script src="js/custom.js"></script>
 
 	<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
-	<script type="text/javascript">
-
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-12345678-1']);
-		_gaq.push(['_trackPageview']);
-
-		(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-
-	</script>
+	
 	 -->
