--- a/partials/portfolio.html
+++ b/partials/portfolio.html
@@ -1,20 +1,19 @@
 <!-- Start Portfolio -->
-<div class="container">
+<div class="container" id="portfolio">
 
 	<h2>Portfolio</h2>
 
-	<ul class="nav nav-pills sort-source" data-sort-id="portfolio" data-option-key="filter">
+	<!-- <ul class="nav nav-pills sort-source" data-sort-id="portfolio" data-option-key="filter">
 		<li data-option-value="*" class="active"><a href="#">Show All</a></li>
-		<li data-option-value=".cake"><a href="#">Cakes</a></li>
-		<li data-option-value=".tart"><a href="#">Tarts</a></li>
-		<li data-option-value=".pastry"><a href="#">Pastries</a></li>
+		<li data-option-value=".Cake"><a href="#">Cakes</a></li>
+		<li data-option-value=".Tart"><a href="#">Tarts</a></li>
+		<li data-option-value=".Pastry"><a href="#">Pastry</a></li>
 	</ul>
 
-	<hr />
+	<hr /> -->
 
 	<div class="row">
-
-		<ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+		<ul class="portfolio-list sort-destination" data-sort-id="xxx">
 			{{#each products}}
 			{{#if portfolio}}
 				<li class="col-md-3 isotope-item {{type}}">
