--- a/partials/occasions.html
+++ b/partials/occasions.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="occasions">
 	<div class="row center">
 		<div class="col-md-12">
 			<h2 class="short word-rotator-title">
