More progress with the site and graphics

--- a/partials/aboutUs.html
+++ b/partials/aboutUs.html
@@ -1,289 +1,14 @@
 <!-- Begin About -->
-<div class="container" id="aboutUs">
+{{>whyClientsPickedUs}}
 
-	<hr class="tall" />
+{{>ingredients}}
 
-	<div class="row center">
-		<div class="col-md-12">
-			<h2 class="short word-rotator-title">6  <strong class="inverted" data-appear-animation="bounceIn">
-					<span class="word-rotate">
-						<span class="word-rotate-items">
-							<span>reasons</span>
-							<span>motivators</span>
-							<span>rules</span>
-						</span>
-					</span>
-				</strong> why clients picked us
-			</h2>
-			<p class="featured lead">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla non <span class="alternative-font">metus.</span> pulvinar. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut eu risus enim, ut pulvinar lectus. Sed hendrerit nibh.
-			</p>
-		</div>
-	</div>
+{{>numbers}}
 
-	<hr class="tall" />
-</div>
+{{>recommendations}}
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="feature-box secundary">
-						<div class="feature-box-icon">
-							<i class="icon icon-group"></i>
-						</div>
-						<div class="feature-box-info">
-							<h4 class="shorter">Ingredients</h4>
-							<p class="tall">Lorem ipsum dolor sit amet, consectetur adipiscing <span class="alternative-font">metus.</span> elit. Quisque rutrum pellentesque imperdiet.</p>
-						</div>
-					</div>
-					<div class="feature-box secundary">
-						<div class="feature-box-icon">
-							<i class="icon icon-file"></i>
-						</div>
-						<div class="feature-box-info">
-							<h4 class="shorter">100% natural and fresh</h4>
-							<p class="tall">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature-box secundary">
-						<div class="feature-box-icon">
-							<i class="icon icon-film"></i>
-						</div>
-						<div class="feature-box-info">
-							<h4 class="shorter">Handmade</h4>
-							<p class="tall">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
-						</div>
-					</div>
-					<div class="feature-box secundary">
-						<div class="feature-box-icon">
-							<i class="icon icon-check"></i>
-						</div>
-						<div class="feature-box-info">
-							<h4 class="shorter">Present for every order</h4>
-							<p class="tall">Lorem ipsum dolor sit amet, consectetur adipiscing <span class="alternative-font">metus.</span> elit. Quisque rutrum pellentesque imperdiet.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature-box secundary">
-						<div class="feature-box-icon">
-							<i class="icon icon-bars"></i>
-						</div>
-						<div class="feature-box-info">
-							<h4 class="shorter">We don't have holidays</h4>
-							<p class="tall">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
-						</div>
-					</div>
-					<div class="feature-box secundary">
-						<div class="feature-box-icon">
-							<i class="icon icon-desktop"></i>
-						</div>
-						<div class="feature-box-info">
-							<h4 class="shorter">Customer</h4>
-							<p class="tall">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+{{>whoWeAre}}
 
-<section class="featured highlight footer">
-	<div class="container">
-		<div class="row center counters">
-			<div class="col-md-3">
-				<strong data-to="400" data-append="+">0</strong>
-				<label>Happy Clients</label>
-			</div>
-			<div class="col-md-3">
-				<strong data-to="3">0</strong>
-				<label>Years in Business</label>
-			</div>
-			<div class="col-md-3">
-				<strong data-to="1000" data-append="+">0</strong>
-				<label>Cakes made</label>
-			</div>
-			<div class="col-md-3">
-				<strong data-to="57">0</strong>
-				<label>Different cakes</label>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(img/parallax-transparent.jpg);">
-	<div class="container">
-		<div class="row center">
-			<div class="col-md-12">
-
-				<div class="row">
-					<div class="owl-carousel" data-plugin-options='{"items": 1}'>
-						<div>
-							<blockquote>
-								<p><i class="icon icon-quote-left"></i> Hello, I want to thank you for creating a great template and for the excellent and quick support and help that you have been providing to me as I begin to work with it.</p>
-								<span>- Joe Doe</span>
-							</blockquote>
-						</div>
-						<div>
-							<blockquote>
-								<p><i class="icon icon-quote-left"></i> Just want to say Okler RULES. Provide great tech service for each template and allows me to become more knowledgeable as a designer.</p>
-								<span>- Edward Chelton</span>
-							</blockquote>
-						</div>
-						<div>
-							<blockquote>
-								<p><i class="icon icon-quote-left"></i> Just came here to say a big thank you to the author of this template. It works amazingly well, the documentation is top-notch, and the theme looks beautiful.</p>
-								<span>- Bruce Ericson</span>
-							</blockquote>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</section>
-
-<div class="container">
-	<div class="row">
-		<div class="col-md-5">
-			<h2><strong>Who</strong> We Are</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In eu libero ligula. </p>
-		</div>
-		<div class="col-md-7">
-			<div class="progress-bars">
-				<div class="progress-label">
-					<span>Decoration</span>
-				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-primary" data-appear-progress-animation="100%">
-						<span class="progress-bar-tooltip">100%</span>
-					</div>
-				</div>
-				<div class="progress-label">
-					<span>Taste</span>
-				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-primary" data-appear-progress-animation="85%" data-appear-animation-delay="300">
-						<span class="progress-bar-tooltip">85%</span>
-					</div>
-				</div>
-				<div class="progress-label">
-					<span>WordPress</span>
-				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-primary" data-appear-progress-animation="75%" data-appear-animation-delay="600">
-						<span class="progress-bar-tooltip">75%</span>
-					</div>
-				</div>
-				<div class="progress-label">
-					<span>Photoshop</span>
-				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-primary" data-appear-progress-animation="85%" data-appear-animation-delay="900">
-						<span class="progress-bar-tooltip">85%</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<hr class="tall" />
-</div>
-
-<div class="container">
-	<div class="row" id="team">
-		<div class="col-md-12">
-
-			<div class="row">
-
-				<ul class="team-list">
-					<li class="col-md-3">
-						<div class="team-item thumbnail">
-							<a href="about-me.html" class="thumb-info team">
-								<img alt="" height="270" src="img/team/team-1.jpg">
-								<span class="thumb-info-title">
-									<span class="thumb-info-inner">Anna Kyrpychenko</span>
-									<span class="thumb-info-type">CEO</span>
-								</span>
-							</a>
-							<span class="thumb-info-caption">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan.</p>
-								<span class="thumb-info-social-icons">
-									<a rel="tooltip" data-placement="bottom" target="_blank" href="http://www.facebook.com" data-original-title="Facebook"><i class="icon icon-facebook"></i><span>Facebook</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.twitter.com" data-original-title="Twitter"><i class="icon icon-twitter"></i><span>Twitter</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.instagram.com" data-original-title="Instagram"><i class="icon icon-instagram"></i><span>Instagram</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.pinterest.com" data-original-title="Pinterest"><i class="icon icon-pinterest"></i><span>Pinterest</span></a>
-								</span>
-							</span>
-						</div>
-					</li>
-					<li class="col-md-3">
-						<div class="team-item thumbnail">
-							<a href="about-me.html" class="thumb-info team">
-								<img alt="" height="270" src="img/team/team-2.jpg">
-								<span class="thumb-info-title">
-									<span class="thumb-info-inner">Leonid Kyrpychenko</span>
-									<span class="thumb-info-type">Marketing</span>
-								</span>
-							</a>
-							<span class="thumb-info-caption">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan.</p>
-								<span class="thumb-info-social-icons">
-									<a rel="tooltip" data-placement="bottom" target="_blank" href="http://www.facebook.com" data-original-title="Facebook"><i class="icon icon-facebook"></i><span>Facebook</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.twitter.com" data-original-title="Twitter"><i class="icon icon-twitter"></i><span>Twitter</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.linkedin.com" data-original-title="Linkedin"><i class="icon icon-linkedin"></i><span>Linkedin</span></a>
-								</span>
-							</span>
-						</div>
-					</li>
-					<li class="col-md-3">
-						<div class="team-item thumbnail">
-							<a href="about-me.html" class="thumb-info team">
-								<img alt="" height="270" src="img/team/team-3.jpg">
-								<span class="thumb-info-title">
-									<span class="thumb-info-inner">Maria Kyrpychenko</span>
-									<span class="thumb-info-type">Developer</span>
-								</span>
-							</a>
-							<span class="thumb-info-caption">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan.</p>
-								<span class="thumb-info-social-icons">
-									<a rel="tooltip" data-placement="bottom" target="_blank" href="http://www.facebook.com" data-original-title="Facebook"><i class="icon icon-facebook"></i><span>Facebook</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.twitter.com" data-original-title="Twitter"><i class="icon icon-twitter"></i><span>Twitter</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.linkedin.com" data-original-title="Linkedin"><i class="icon icon-linkedin"></i><span>Linkedin</span></a>
-								</span>
-							</span>
-						</div>
-					</li>
-					<li class="col-md-3">
-						<div class="team-item thumbnail">
-							<a href="about-me.html" class="thumb-info team">
-								<img alt="" height="270" src="img/team/team-4.jpg">
-								<span class="thumb-info-title">
-									<span class="thumb-info-inner">Michael Kyrpychenko</span>
-									<span class="thumb-info-type">Design</span>
-								</span>
-							</a>
-							<span class="thumb-info-caption">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan.</p>
-								<span class="thumb-info-social-icons">
-									<a rel="tooltip" data-placement="bottom" target="_blank" href="http://www.facebook.com" data-original-title="Facebook"><i class="icon icon-facebook"></i><span>Facebook</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.twitter.com" data-original-title="Twitter"><i class="icon icon-twitter"></i><span>Twitter</span></a>
-									<a rel="tooltip" data-placement="bottom" href="http://www.linkedin.com" data-original-title="Linkedin"><i class="icon icon-linkedin"></i><span>Linkedin</span></a>
-								</span>
-							</span>
-						</div>
-					</li>
-				</ul>
-
-			</div>
-		</div>
-	</div>
-</div>
+{{>team}}
 
 <!-- End About -->
