--- a/partials/exclusiveFeature.html
+++ b/partials/exclusiveFeature.html
@@ -6,7 +6,7 @@
 			<div class="col-md-6">
 				<h2 class="push-top">Exclusive <strong>Pastry</strong></h2>
 				<p class="lead">
-					<strong>57</strong> cakes, <strong>128</strong> kinds of filling, more than <strong>400</strong> different tastes 
+					<strong>57</strong> cakes, <strong>128</strong> kinds of fillings, more than <strong>400</strong> different tastes 
 				</p>
 				<p class="tall">
 					 Our gourmet cakes are baked exclusively in our award-winning bakery and each cake we make represent a piece of art. Our pastry service is perfect for your loved ones next birthday, anniversary or special occasion. Order with the best birthday cake delivery site online - we guarantee your gift will be on time! Each cake, cookie and brownie delivery arrives in a gift box and includes a greeting card with your personal message. Saying Happy Birthday has never been easier with our cake deliveries! Mix and match our cakes and cookies for a unique and refreshing gift delivery to let your your loved one know you care.
