--- a/partials/orderNow.html
+++ b/partials/orderNow.html
@@ -4,7 +4,57 @@
 	<div class="container featured">
 		<div class="row">
 			<div class="center">
-				<h3>Porto is <strong>everything</strong> you need to create an <strong>awesome</strong> website! <a href="#" class="btn btn-lg btn-primary" data-appear-animation="bounceIn">Order Now!</a> <span class="arrow hlb" data-appear-animation="rotateInUpLeft" style="top: -22px;"></span></h3>
+				<h3>AnnPastry.com is <strong>everything</strong> you need to have an <strong>awesome</strong> time! <button data-toggle="modal" data-target="#orderModal" href="#" class="btn btn-lg btn-primary" data-appear-animation="bounceIn">Order Now!</button> <span class="arrow hlb" data-appear-animation="rotateInUpLeft" style="top: -22px;"></span></h3>
+
+
+				<div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+								<h4 class="modal-title" id="formModalLabel">Make an order</h4>
+							</div>
+							<div class="modal-body">
+								<form id="demo-form" class="form-horizontal mb-lg" novalidate="novalidate">
+									<div class="form-group mt-lg">
+										<label class="col-sm-3 control-label">Name</label>
+										<div class="col-sm-9">
+											<input type="text" name="name" class="form-control" placeholder="Type your name..." required="">
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-sm-3 control-label">Email</label>
+										<div class="col-sm-9">
+											<input type="email" name="email" class="form-control" placeholder="Type your email..." required="">
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-sm-3 control-label">Select product</label>
+										<div class="col-sm-9">
+											<select class="form-control">
+												<option value="">Select a pastry</option>
+												{{#each products}}
+													<option value="{{id}}">{{name}}</option>
+												{{/each}}
+											</select>
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-sm-3 control-label">Comment</label>
+										<div class="col-sm-9">
+											<textarea rows="5" class="form-control" placeholder="Type your comment..." required=""></textarea>
+										</div>
+									</div>
+								</form>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-primary">Order Now!</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
