--- a/partials/weAreExcited.html
+++ b/partials/weAreExcited.html
@@ -5,8 +5,8 @@
 		<div class="row center">
 			<div class="col-md-12">
 				<i class="icon icon-featured icon-comments" data-appear-animation="bounceIn"></i>
-				<h1 class="short text-shadow big white bold"><strong>We're excited about Porto Template</strong></h1>
-				<h3 class="lead white">5,500 customers in 100 countries use Porto Template. Meet our customers.</h3>
+				<h1 class="short text-shadow big white bold"><strong>We're excited to delight you</strong></h1>
+				<h3 class="lead white">100+ customers in 5 countries have tried us.</h3>
 			</div>
 		</div>
 	</div>
